--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,20 @@
-cmake_minimum_required(VERSION 3.27.1)
+cmake_minimum_required(VERSION 3.25)
 
 project(stlEdit
     LANGUAGES CXX)
 
 set (CMAKE_CXX_STANDART 20)
 
-add_executable(
-    stlEdit
-    main.cpp
-    src/parcer.cpp
-    headers/parcer.h)
+file(GLOB sources CONFIGURE_DEPENDS
+    "src/*.cpp")
+
+add_executable(stlEdit
+    main.cpp)
+
+target_include_directories(stlEdit
+    PRIVATE
+    headers/)
+
+target_sources(stlEdit
+    PRIVATE
+    ${sources})
