--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.25)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 project(stlEdit
     LANGUAGES CXX)
-
-set (CMAKE_CXX_STANDART 20)
 
 file(GLOB sources CONFIGURE_DEPENDS
     "src/*.cpp")
@@ -20,3 +22,4 @@ target_sources(stlEdit
     ${sources})
 
 add_compile_options(-Wall -Wextra)
+
