Write rotate function, write exceptions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.25)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
 project(stlEdit
     LANGUAGES CXX)
+
+set (CMAKE_CXX_STANDARD 20)
+set (CMAKE_CXX_COMPILER clang++)
+#set (CMAKE_CXX_COMPILER g++)
+add_compile_options(-Wall -Wextra)
 
 file(GLOB sources CONFIGURE_DEPENDS
     "src/*.cpp")
@@ -20,6 +21,3 @@ target_include_directories(stlEdit
 target_sources(stlEdit
     PRIVATE
     ${sources})
-
-add_compile_options(-Wall -Wextra)
-
