--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ project(stlEdit
 
 set (CMAKE_CXX_STANDARD 20)
 set (CMAKE_CXX_COMPILER clang++)
-#set (CMAKE_CXX_COMPILER g++)
+# set (CMAKE_CXX_COMPILER g++)
 add_compile_options(-Wall -Wextra)
+# add_link_options(-static)
 
 file(GLOB sources CONFIGURE_DEPENDS
     "src/*.cpp")
